--- a/vignettes/DIscBIO-vignette.Rmd
+++ b/vignettes/DIscBIO-vignette.Rmd
@@ -27,7 +27,7 @@ library(enrichR, quiet=TRUE)
 
 ## Loading dataset
 
-The dataset should be formatted in a data frame where columns refer to samples and rows refer to genes. 
+The dataset should be formatted in a data frame where columns refer to samples and rows refer to genes.
 
 
 ```{r}
@@ -37,7 +37,7 @@ DataSet<-get(FileName)
 
 ## 1. Data Pre-processing
 
-Prior to applying data analysis methods, it is standard to pre-process the raw read counts resulted from the sequencing. The preprocessing approach depends on the existence or absence of ERCC spike-ins. In both cases, it includes normalization of read counts and gene filtering. 
+Prior to applying data analysis methods, it is standard to pre-process the raw read counts resulted from the sequencing. The preprocessing approach depends on the existence or absence of ERCC spike-ins. In both cases, it includes normalization of read counts and gene filtering.
 
 #### Normalization of read counts
 To account for RNA composition and sequencing depth among samples (single-cells), the normalization method “median of ratios” is used. This method takes the ratio of the gene instantaneous median to the total counts for all genes in that cell (column median). The gene instantaneous median is the product of multiplying the median of the total counts across all cells (row median) with the read of the target gene in each cell. This normalization method makes it possible to compare the normalized counts for each gene equally between samples.
@@ -62,33 +62,33 @@ Filtering the raw data that includes ERCCs can be done by applying the “NoiseF
     - geneCol: Color of the genes that did not pass the filtration.
     - FgeneCol: Color of the genes that passt the filtration.
     - erccCol: Color of the ERCC spik-ins.
-    - Val: A logical vector that allows plotting only the validated ERCC spike-ins. Default is TRUE. If Val=FALSE will 
+    - Val: A logical vector that allows plotting only the validated ERCC spike-ins. Default is TRUE. If Val=FALSE will
       plot all the ERCC spike-ins.
-    - plot: A logical vector that allows plotting the technical noise. Default is TRUE. 
-    - export: A logical vector that allows writing the final gene list in excel file. Default is TRUE. 
+    - plot: A logical vector that allows plotting the technical noise. Default is TRUE.
+    - export: A logical vector that allows writing the final gene list in excel file. Default is TRUE.
     - quiet: if `TRUE`, suppresses printed output
-    
-To normalize the raw sequencing reads the function Normalizedata() should be used, this function takes 8 parameters. 
+
+To normalize the raw sequencing reads the function Normalizedata() should be used, this function takes 8 parameters.
 - In case the user would like just to normalize the reads without any further gene filtering the parameters minexpr and minnumber should be set to 0.
 - In case the user would like just to normalize the reads and run gene filtering based on gene expression the parameters minexpr and minnumber should have values. This function will discard cells with less than mintotal transcripts. Genes that are not expressed at minexpr transcripts in at least minnumber cells are discarded.
-          
-The function Normalizedata() normalizes the count reads using the normalization method “median of ratios” 
-          
+
+The function Normalizedata() normalizes the count reads using the normalization method “median of ratios”
+
 To Finalize the preprocessing the function FinalPreprocessing() should be implemented by setting the parameter "GeneFlitering" to NoiseF ( whether the dditional gene filtering step based on gene expression was implemented on not).
 
 
 ```{r}
-sc<-NoiseFiltering(sc,percentile=0.9, CV=0.2)       
+sc<-NoiseFiltering(sc,percentile=0.9, CV=0.2)
 
 ####  Normalizing the reads without any further gene filtering
-sc<-Normalizedata(sc, mintotal=1000, minexpr=0, minnumber=0, maxexpr=Inf, downsample=FALSE, dsn=1, rseed=17000) 
+sc<-Normalizedata(sc, mintotal=1000, minexpr=0, minnumber=0, maxexpr=Inf, downsample=FALSE, dsn=1, rseed=17000)
 
 ####  Additional gene filtering step based on gene expression
 #MIínExp<- mean(rowMeans(DataSet,na.rm=TRUE))
 #MIínExp
 #MinNumber<- round(length(DataSet[1,])/3)    # To be expressed in at least one third of the cells.
 #MinNumber
-#sc<-Normalizedata(sc, mintotal=1000, minexpr=MIínExp, minnumber=MinNumber, maxexpr=Inf, downsample=FALSE, dsn=1, rseed=17000) 
+#sc<-Normalizedata(sc, mintotal=1000, minexpr=MIínExp, minnumber=MinNumber, maxexpr=Inf, downsample=FALSE, dsn=1, rseed=17000)
 
 sc<-FinalPreprocessing(sc,GeneFlitering="NoiseF",export=TRUE) ### The GeneFiltering can be either "NoiseF" or"ExpF"
 ```
@@ -96,15 +96,15 @@ sc<-FinalPreprocessing(sc,GeneFlitering="NoiseF",export=TRUE) ### The GeneFilter
 ### 1.2. Filtering and normalizing the raw data that does not include ERCCs
 
 To normalize and filter the raw data that does not include ERCCs can be done by applying the function Normalizedata() and giving  the parameters minexpr and minnumber some values. This function will discard cells with less than mintotal transcripts. Genes that are not expressed at minexpr transcripts in at least minnumber cells are discarded. Furthermore, it will normalize the count reads using the normalization method “median of ratios”.
-          
+
 To Finalize the preprocessing the function FinalPreprocessing() should be implemented by setting the parameter "GeneFlitering" to ExpF.
 
 ###                                               ¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤ Running this cell will overwrite the previous cell ¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤
 
 
 ```{r}
-#OnlyExpressionFiltering=TRUE           
-OnlyExpressionFiltering=FALSE         
+#OnlyExpressionFiltering=TRUE
+OnlyExpressionFiltering=FALSE
 
 if (OnlyExpressionFiltering==TRUE){
     MIínExp<- mean(rowMeans(DataSet,na.rm=TRUE))
@@ -112,28 +112,28 @@ if (OnlyExpressionFiltering==TRUE){
     MinNumber<- round(length(DataSet[1,])/3)    # To be expressed in at least one third of the cells.
     MinNumber
     sc<-Normalizedata(sc, mintotal=1000, minexpr=MIínExp, minnumber=MinNumber, maxexpr=Inf, downsample=FALSE, dsn=1, rseed=17000) #### In this case this function is used to filter out genes and cells.
-    sc<-FinalPreprocessing(sc,GeneFlitering="ExpF",export=TRUE)  
+    sc<-FinalPreprocessing(sc,GeneFlitering="ExpF",export=TRUE)
 }
 ```
 
 ## 2. Cellular Clustering and Pseudo Time ordering
 
-Cellular clustering is performed according to the gene expression profiles to detect cellular sub-population with unique properties. After clustering, pseudo-temporal ordering is generated to indicate the cellular differentiation degree. 
+Cellular clustering is performed according to the gene expression profiles to detect cellular sub-population with unique properties. After clustering, pseudo-temporal ordering is generated to indicate the cellular differentiation degree.
 
 ![PSCAN](Clustering.png){width=90%}
 
 ## 2.1. K-means Clustering
 
-Rare cell type Identification algorithm (RaceID) was used to cluster the pre-processed data using k-means on a similarity distance matrix, which was based on Pearson correlation and the similarity matrix was computed as “1 – Pearson correlation”. The approach of the proposed clustering, i.e., applying k-means on a similarity distance matrix using the Euclidean metric, improves cluster separation. RaceID estimates the number of clusters by finding the minimal clusters' number at the saturation level of gap statistics, which standardizes the within-cluster dispersion. 
+Rare cell type Identification algorithm (RaceID) was used to cluster the pre-processed data using k-means on a similarity distance matrix, which was based on Pearson correlation and the similarity matrix was computed as “1 – Pearson correlation”. The approach of the proposed clustering, i.e., applying k-means on a similarity distance matrix using the Euclidean metric, improves cluster separation. RaceID estimates the number of clusters by finding the minimal clusters' number at the saturation level of gap statistics, which standardizes the within-cluster dispersion.
 
 The Clustexp() functions has several parameters:
 - object: the outcome of running the DISCBIO() function.
 - clustnr Maximum number of clusters for the derivation of the cluster number by the saturation of mean within-cluster dispersion. Default is 20.
 - bootnr A numeric value of booststrapping runs for \code{clusterboot}. Default is 50.
-- metric Is the method to transform the input data to a distance object. 
-- Metric has to be one of the following: ["spearman","pearson","kendall","euclidean","maximum","manhattan","canberra","binary","minkowski"]. 
+- metric Is the method to transform the input data to a distance object.
+- Metric has to be one of the following: ["spearman","pearson","kendall","euclidean","maximum","manhattan","canberra","binary","minkowski"].
 - do.gap A logical vector that allows generating the number of clusters based on the gap statistics. Default is TRUE.
-- SE.method The SE.method determines the first local maximum of the gap statistics. 
+- SE.method The SE.method determines the first local maximum of the gap statistics.
 - The SE.method has to be one of the following:["firstSEmax","Tibs2001SEmax","globalSEmax","firstmax","globalmax"]. Default is "Tibs2001SEmax"
 - SE.factor A numeric value of the fraction of the standard deviation by which the local maximum is required to differ from the neighboring points it is compared to. Default is 0.25.
 - B.gap Number of bootstrap runs for the calculation of the gap statistics. Default is 50
@@ -175,7 +175,7 @@ Jaccard(sc,Clustering="K-means", K=2, plot=TRUE)     # Jaccard of k-means cluste
 
 #### 2.1.3. Cluster plotting using tSNE maps
 
-Here you visualize the K-means clusters using t-distributed stochastic neighbor embedding (tSNE), which is a non-linear dimensionality reduction method that places neighbor cells close to each other. 
+Here you visualize the K-means clusters using t-distributed stochastic neighbor embedding (tSNE), which is a non-linear dimensionality reduction method that places neighbor cells close to each other.
 
 
 ```{r}
@@ -188,15 +188,15 @@ plotSymbolstSNE(sc,types=sub("(\\_\\d+)$","", names(sc@ndata)))  # To plot the t
 ### Defining outlier cells based on K-means Clustering
 
 Outlier identification is implemented using a background model based on distribution of transcript counts within a cluster. Outlier cells are detected if the probability for that cell c that a minimum number of genes Gmin of observing total counts TGmin is less than a specific threshold Pthr, as given by the red dotted line. Outlier cells in K-means clusters can be detected by running the FindOutliersKM() function.
- 
-In case the user decided to remove outlier cells, the user should set RemovingOutliers to TRUE and then start from the beginning (Data Pre-processing). 
+
+In case the user decided to remove outlier cells, the user should set RemovingOutliers to TRUE and then start from the beginning (Data Pre-processing).
 
 
 ```{r}
-outlg<-round(length(sc@fdata[,1])/200)     # The cell will be considered as an outlier if it has a minimum of 0.5% of the number of filtered genes as outlier genes. 
+outlg<-round(length(sc@fdata[,1])/200)     # The cell will be considered as an outlier if it has a minimum of 0.5% of the number of filtered genes as outlier genes.
 Outliers<- FindOutliersKM(sc, K=2, outminc=5,outlg=outlg,probthr=.5*1e-3,thr=2**-(1:40),outdistquant=.75, plot=TRUE, quiet=FALSE)
 
-RemovingOutliers=FALSE     
+RemovingOutliers=FALSE
 # RemovingOutliers=TRUE                    # Removing the defined outlier cells based on K-means Clustering
 
 if(RemovingOutliers==TRUE){
@@ -209,7 +209,7 @@ if(RemovingOutliers==TRUE){
 }
 ```
 
-#### 2.1.4. Cellular pseudo-time ordering based on k-means clusters 
+#### 2.1.4. Cellular pseudo-time ordering based on k-means clusters
 
 ```{r}
 sc<-KmeanOrder(sc,quiet=FALSE, export=TRUE)
@@ -218,7 +218,7 @@ plotOrderKMtsne(sc)
 
 #### 2.1.5 Plotting the K-means clusters in heatmap
 
-The similarities between single-cells were computed by Euclidean distances of Pearson transcriptome correlation matrix. Based on these similarities, a heatmap portrayal of cell-to-cell distances was plotted using Euclidean as the distance measure and the single linkage as the clustering method, cluster centers were ordered by hierarchic clustering. 
+The similarities between single-cells were computed by Euclidean distances of Pearson transcriptome correlation matrix. Based on these similarities, a heatmap portrayal of cell-to-cell distances was plotted using Euclidean as the distance measure and the single linkage as the clustering method, cluster centers were ordered by hierarchic clustering.
 
 
 ```{r}
@@ -254,8 +254,8 @@ cdiff<-DEGanalysis2clust(sc,Clustering="K-means",K=2,fdr=0.05,name="Name",First=
 
 ```{r}
 #### To show the result table
-head(cdiff[[1]])                  # The first component 
-head(cdiff[[2]])                  # The second component 
+head(cdiff[[1]])                  # The first component
+head(cdiff[[2]])                  # The second component
 ```
 
 ### 3.1.2 Determining DEGs between all clusters
@@ -270,20 +270,20 @@ cdiff<-DEGanalysis(sc,Clustering="K-means",K=2,fdr=0.05,name="all_clusters",expo
 
 ```{r}
 #### To show the result table
-head(cdiff[[1]])                  # The first component 
+head(cdiff[[1]])                  # The first component
 head(cdiff[[2]])                  # The second component
 ```
 
 #### 3.2 Identifying DEGs using binomial differential expression
 
-The function KMClustDiffGenes identifies differentially regulated genes for each cluster of the K-means clustering in 
+The function KMClustDiffGenes identifies differentially regulated genes for each cluster of the K-means clustering in
 comparison to the ensemble of all cells. It returns a list with a data.frame element for each cluster that contains the mean expression across all cells not in the cluster (mean.ncl) and in the cluster (mean.cl), the fold-change in the cluster versus all remaining cells (fc), and the p-value for differential expression between all cells in a cluster and all remaining cells. The p-value is computed based on the overlap of negative binomials fitted to the count distributions within the two groups akin to DESeq.
 
 
 ```{r}
 cdiffBinomial<-KMClustDiffGenes(sc,K=2,fdr=.01,,quiet=TRUE)    ########## Binomial differential expression analysis
 #### To show the result table
-head(cdiffBinomial[[1]])                  # The first component 
+head(cdiffBinomial[[1]])                  # The first component
 head(cdiffBinomial[[2]])                  # The second component
 ```
 
@@ -291,19 +291,19 @@ head(cdiffBinomial[[2]])                  # The second component
 
 Volcano plots are used to readily show the DEGs by plotting significance versus fold-change on the y and x axes, respectively.
 
-
 ```{r}
-name<-cdiffBinomial[[2]][2,4]    ############ Selecting the DEGs' table  ##############
-U<-read.csv(file=paste0(name),head=TRUE,sep=",")
-Vplot<-VolcanoPlot(U,value=0.001,name=name,FS=.3,fc=1)
-
-#### In case the output of this function is an error "Error in plot.window(...): need finite 'ylim' values", the adj should be set to TRUE
-### In case the user would like to get the names of the significant DEGs then FS should be set to a value of 0.3 or higher.
+name <- cdiffBinomial[[2]][2, 4] # Selecting the DEGs table
+U <- read.csv(file=paste0(name), head=TRUE, sep=",")
+Vplot <- VolcanoPlot(U, value=0.001, name=name, FS=.5, fc=1)
 ```
 
-## 4. Identifying biomarkers (decision trees and networking analysis) 
+In case the output of this function is the error "Error in plot.window(...): need finite 'ylim' values", `adj` should be set to TRUE.
 
-There are several methods to identify biomarkers, among them are decision trees and hub detection through networking analysis. The outcome of STRING analysis is stored in tab separated values (TSV) files. These TSV files served as an input to check both the connectivity degree and the betweenness centrality, which reflects the communication flow in the defined PPI networks 
+In case the user would like to get the names of the significant DEGs, then FS should be set to a value of 0.3 or higher.
+
+## 4. Identifying biomarkers (decision trees and networking analysis)
+
+There are several methods to identify biomarkers, among them are decision trees and hub detection through networking analysis. The outcome of STRING analysis is stored in tab separated values (TSV) files. These TSV files served as an input to check both the connectivity degree and the betweenness centrality, which reflects the communication flow in the defined PPI networks
 
 ![DIsccBIO](KM3.png){width=90%}
 
@@ -322,7 +322,7 @@ DATAforDT<-ClassVectoringDT(sc,Clustering="K-means",K=3,First=First,Second=Secon
 
 ```{r}
 j48dt<-J48DT(DATAforDT)
-summary(j48dt) 
+summary(j48dt)
 ```
 
 #### 4.1.1. Evaluating the performance of the J48 Decision Tree
@@ -336,7 +336,7 @@ j48dt<-J48DTeval(DATAforDT,num.folds=10,First=First,Second=Second)
 
 
 ```{r}
-rpartDT<-RpartDT(DATAforDT)
+rpartDT <- RpartDT(DATAforDT)
 ```
 
 #### 4.2.1. Evaluating the performance of the RPART Decision Tree
@@ -367,11 +367,11 @@ networking                            ##### In case the Examine response compone
 ```
 
 ```{r}
-data=networking[1:25,1]              # plotting the network of the top 25 highly connected genes 
+data=networking[1:25,1]              # plotting the network of the top 25 highly connected genes
 network<-Networking(data,FileName,plot_width=25, plot_height=10)
 ```
 
-### 4.3.2 Particular set of DEGs 
+### 4.3.2 Particular set of DEGs
 
 
 ```{r}
@@ -427,7 +427,7 @@ Model-based clustering assumes that the data are generated by a model and attemp
 
 
 ```{r}
-sc <- Exprmclust(sc,K=3,reduce=TRUE,quiet=TRUE) 
+sc <- Exprmclust(sc,K=3,reduce=TRUE,quiet=TRUE)
 cat("\t","     Cell-ID"," Cluster Number","\n")
 sc@MBclusters$clusterid
 
@@ -435,7 +435,7 @@ sc@MBclusters$clusterid
 
 #### 2.2.2. Cluster plotting using PCA and tSNE maps
 
-To visualize the detected clusters, two common dimensionality reduction tools are implemented: tSNE map and principal component analysis (PCA), which is a linear dimensionality reduction method that preserves the global structure and shows how the measurements themselves are related to each other.  
+To visualize the detected clusters, two common dimensionality reduction tools are implemented: tSNE map and principal component analysis (PCA), which is a linear dimensionality reduction method that preserves the global structure and shows how the measurements themselves are related to each other.
 
 
 ```{r}
@@ -460,7 +460,7 @@ plotsilhouetteMB(sc,K=3)
 ```
 
 ```{r}
-sc<- Clustexp(sc,cln=3,quiet=TRUE)                  
+sc<- Clustexp(sc,cln=3,quiet=TRUE)
 Jaccard(sc,Clustering="MB", K=3, plot=TRUE)    # Jaccard of Model based clusters
 ```
 
@@ -468,10 +468,10 @@ Jaccard(sc,Clustering="MB", K=3, plot=TRUE)    # Jaccard of Model based clusters
 
 
 ```{r}
-outlg<-round(length(sc@fdata[,1])/200)     # The cell will be considered as an outlier if it has a minimum of 0.5% of the number of filtered genes as outlier genes. 
+outlg<-round(length(sc@fdata[,1])/200)     # The cell will be considered as an outlier if it has a minimum of 0.5% of the number of filtered genes as outlier genes.
 Outliers<- FindOutliersMB(sc, K=3, outminc=5,outlg=outlg,probthr=.5*1e-3,thr=2**-(1:40),outdistquant=.75, plot=TRUE, quiet=TRUE)
 
-RemovingOutliers=FALSE     
+RemovingOutliers=FALSE
 # RemovingOutliers=TRUE                    # Removing the defined outlier cells based on K-means Clustering
 
 if(RemovingOutliers==TRUE){
@@ -511,7 +511,7 @@ plotOrderMBtsne(sc)
 
 
 ```{r}
-MBclustheatmap(sc,hmethod="single", plot=TRUE) 
+MBclustheatmap(sc,hmethod="single", plot=TRUE)
 ```
 
 #### 2.2.4.4 Plotting the gene expression of a particular gene in a tSNE map
@@ -547,10 +547,10 @@ The user can define DEGs between all clusters generated by either K-means or mod
 
 ```{r}
 ####### differential expression analysis between cluster 2 and cluster 3 of the Model-Based clustering using FDR of 0.05
-MBcdiff<-DEGanalysis2clust(sc,Clustering="MB",K=3,fdr=0.1,name="Name",First="CL1",Second="CL2",export=TRUE,quiet=FALSE)   
+MBcdiff<-DEGanalysis2clust(sc,Clustering="MB",K=3,fdr=0.1,name="Name",First="CL1",Second="CL2",export=TRUE,quiet=FALSE)
 #### To show the result table
-head(MBcdiff[[1]])                  # The first component 
-head(MBcdiff[[2]])                  # The second component 
+head(MBcdiff[[1]])                  # The first component
+head(MBcdiff[[2]])                  # The second component
 ```
 
 ### 3.1.2 Determining DEGs between all clusters
@@ -561,26 +561,26 @@ head(MBcdiff[[2]])                  # The second component
 ```{r}
 MBcdiff<-DEGanalysis(sc,Clustering="MB",K=3,fdr=0.05,name="all_clusters",export=TRUE,quiet=TRUE)   ####### differential expression analysis between all clusters
 #### To show the result table
-head(MBcdiff[[1]])                  # The first component 
+head(MBcdiff[[1]])                  # The first component
 head(MBcdiff[[2]])                  # The second component
 ```
 
 ```{r}
 #### To show the result table
-head(MBcdiff[[1]])                  # The first component 
+head(MBcdiff[[1]])                  # The first component
 head(MBcdiff[[2]])                  # The second component
 ```
 
 #### 3.2 Identifying DEGs using binomial differential expression
 
-The function MBClustDiffGenes identifies differentially regulated genes for each cluster of the Model-Based clustering in 
+The function MBClustDiffGenes identifies differentially regulated genes for each cluster of the Model-Based clustering in
 comparison to the ensemble of all cells. It returns a list with a data.frame element for each cluster that contains the mean expression across all cells not in the cluster (mean.ncl) and in the cluster (mean.cl), the fold-change in the cluster versus all remaining cells (fc), and the p-value for differential expression between all cells in a cluster and all remaining cells. The p-value is computed based on the overlap of negative binomials fitted to the count distributions within the two groups akin to DESeq.
 
 
 ```{r}
 MBcdiffBinomial<-MBClustDiffGenes(sc,K=3,fdr=.01,export=TRUE, quiet=TRUE)    ########## Binomial differential expression analysis
 #### To show the result table
-head(MBcdiffBinomial[[1]])                  # The first component 
+head(MBcdiffBinomial[[1]])                  # The first component
 head(MBcdiffBinomial[[2]])                  # The second component
 ```
 
@@ -593,14 +593,14 @@ Volcano plots are used to readily show the DEGs by plotting significance versus 
 name<-MBcdiffBinomial[[2]][2,4]    ############ Selecting the "Up-DEG-cluster2.csv " from the DEGs' binomial table  ##############
 #name<-MBcdiff[[2]][4,6]    ############ Selecting the "Up-DEG-cluster2.csv " from the DEGs' SAMseq table  ##############
 U<-read.csv(file=paste0(name),head=TRUE,sep=",")
-Vplot<-VolcanoPlot(U,value=0.001,name=name,FS=.3,fc=0.5)
+Vplot<-VolcanoPlot(U,value=0.001,name=name,FS=.5,fc=0.5)
 #### In case the output of this function is an error "Error in plot.window(...): need finite 'ylim' values", the adj should be set to TRUE
 ### In case the user would like to get the names of the significant DEGs then FS should be set to a value of 0.3 or higher.
 ```
 
-## 4. Identifying biomarkers (decision trees and networking analysis) 
+## 4. Identifying biomarkers (decision trees and networking analysis)
 
-There are several methods to identify biomarkers, among them are decision trees and hub detection through networking analysis. The outcome of STRING analysis is stored in tab separated values (TSV) files. These TSV files served as an input to check both the connectivity degree and the betweenness centrality, which reflects the communication flow in the defined PPI networks 
+There are several methods to identify biomarkers, among them are decision trees and hub detection through networking analysis. The outcome of STRING analysis is stored in tab separated values (TSV) files. These TSV files served as an input to check both the connectivity degree and the betweenness centrality, which reflects the communication flow in the defined PPI networks
 
 ![DIsccBIO](MB3.png){width=90%}
 
@@ -621,7 +621,7 @@ DATAforDT<-ClassVectoringDT(sc,Clustering="MB",K=3,First=First,Second=Second,sig
 
 ```{r}
 j48dt<-J48DT(DATAforDT)
-summary(j48dt) 
+summary(j48dt)
 ```
 
 #### 4.1.1. Evaluating the performance of the J48 Decision Tree
